Ensure color scheme is consistent throughout stylesheets, add modifications to alignment, and tweet properties

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -5,12 +5,8 @@ header {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: #9ecabc;
+  background-color: #9ECABC;
   background-image: url("https://www.transparenttextures.com/patterns/subtle-grunge.png");
-
-
-  
-
 }
 
 .name-text {
