--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -16,7 +16,7 @@
    #logo {
     font-family: Bungee, Sans-Serif;
     font-size: 2em;
-    color: #63b1cf
+    color: #63B1CF
   }
 
   .nav-left {
