--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -5,8 +5,6 @@
 
   #tweet-text {
     width: 100%;
-    outline: none;
-    resize: none;
     white-space: nowrap;
     background-color: #F4F1EC;
     border: 0;
@@ -16,6 +14,13 @@
     padding-bottom: 0px;
     padding-top: 5px;
     margin-bottom: 10px;
+  }
+
+  .compose-hum {
+    display: center;
+    color: #63B1CF;
+    text-align: center;
+    font-family: sans-serif;
   }
 
   .button-text {
@@ -33,3 +38,4 @@
     border: 0;
     padding: 4px 10px 4px 10px;
   } 
+
